--- a/public/404.html
+++ b/public/404.html
@@ -4,7 +4,7 @@
     <meta http-equiv="refresh" content="0; url=/Apple-React-Page/" />
   </head>
   <body></body>
-</html>-->
+</html>
 
 <!DOCTYPE html>
 <html>
@@ -16,6 +16,27 @@
       var redirectTo =
         "/Apple-React-Page" +
         location.pathname +
+        location.search +
+        location.hash;
+      window.location.replace(redirectTo);
+    </script>
+  </head>
+  <body>
+    <p>Redirecting...</p>
+  </body>
+</html>-->
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Redirecting...</title>
+    <script type="text/javascript">
+      const repoName = "Apple-React-Page"; // Your GitHub Pages repo name
+      const pathname = location.pathname.split("/").slice(2).join("/");
+      const redirectTo =
+        "/" +
+        repoName +
+        (pathname ? "/" + pathname : "") +
         location.search +
         location.hash;
       window.location.replace(redirectTo);
